# COS214_SpiceGirls

./: .gitignore  AddOn.h  Aggressive.h  Alliance.cpp  Armour.h  Cloudy.cpp  CommandCenter.cpp  Defensive.cpp  EasySetup.cpp  EasySetup.h  Entity.cpp  Factory.h  GroupProjectUML.vpp  GroupProjectUML.vpp.bak_006d  KeyPoint.cpp  KeyPoint.h  Passive.h  Personal.cpp  PersonalFactory.cpp  PersonalFactory.h  README.md  SaveArchive.h  Strategy.h  Sunny.cpp  Sunny.h  Support.h  SupportFactory.h  TerrainType.cpp  TerrainType.h  Type.h  Vehicle.cpp  VehicleFactory.h  WarEngine.cpp  WarEngineState.cpp  Weather.h  dconfig
builds/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: GroupProjectUML.vpp  SystemClassDiagram.vpp
html/: AddOn_8cpp_source.html  AddOn_8h_source.html  AerialType_8cpp_source.html  AerialType_8h_source.html  Aggressive_8cpp_source.html  Aggressive_8h_source.html  Alliance_8cpp_source.html  Alliance_8h_source.html  AquaticType_8cpp_source.html  AquaticType_8h_source.html  Area_8cpp_source.html  (+134 more)
src/: AddOn.cpp  AddOn.h  AddOnTest.cpp  AddOnTest.h  AerialType.cpp  AerialType.h  Aggressive.cpp  Aggressive.h  Alliance.cpp  Alliance.h  AquaticType.cpp  AquaticType.h  Area.cpp  Area.h  Armour.cpp  Armour.h  CMakeLists.txt  Cloudy.cpp  Cloudy.h  CommandCenter.cpp  CommandCenter.h  Country.cpp  Country.h  Defensive.cpp  Defensive.h  EasySetup.cpp  EasySetup.h  Entity.cpp  Entity.h  Factory.cpp  Factory.h  General.cpp  General.h  GroupProjectUML.vpp  GroupProjectUML.vpp.bak_000d  KeyPoint.cpp  KeyPoint.h  Negotiator.cpp  Negotiator.h  NegotiatorTest.cpp  (+46 more)
(+713 files in other folders)
